# poc

./: .gitignore
opus_stereo_encoder_test/: CMakeLists.txt  README.md  conanfile.txt
opus_stereo_encoder_test/src/: main.cpp
opus_stereo_encoder_test/web/: index.html
webrtc/client/: package.json
webrtc/client/public/: index.html
webrtc/client/src/: index.js
webrtc/server/: CMakeLists.txt  conanfile.txt
webrtc/server/src/: main.cpp
